--- a/Analysis.Rmd
+++ b/Analysis.Rmd
@@ -1,12 +1,11 @@
 ---
 title: "Dissertation Analysis"
 author: "Jamiahus Walton"
+Date: '2019-02-01'
 output:
   html_document:
     df_print: paged
   word_document: default
-params: N_teams
-Date: '2019-02-01'
 ---
 
 ```{r setup, include=FALSE}
@@ -109,7 +108,7 @@ I seek to answer the following general questions: 1) Are there patters in the da
 
 I first want to explore the main performance metrics. The main performance metrics are the score (individual and team), correct items collected, incorrect items collected, errors (total and unique), and time remaining. I want to do this for the individual and team level analysis.
 
-#### Scores
+#### Scores - Averages
 
 ##### Team 
 
@@ -117,7 +116,22 @@ Main question: *Is there an interaction between the Target and SessionOrder vari
 
 ###### Team Score
 
-```{r TeamScore_v_Target_Plot, echo=FALSE}
+```{r}
+plot_data_team <- team_data %>%
+  select(Target, SessionOrder, TeamScore, Team) %>%
+  mutate(rank_order = -rank(team_data[["TeamScore"]]))
+
+ggplot(data = plot_data_team, aes(x = Target, y = TeamScore, fill = Team, group = rank_order)) +
+  geom_bar(stat = "identity", position = "dodge") + 
+  facet_grid(. ~ SessionOrder) + 
+  guides(fill = FALSE) +
+  labs(y = "Score", x = "Target", title = "Team Score Vs. Target", fill = "Teams")
+```
+
+Visually, there is not obvious pattern. In slop from the highest scores to the lowest score in the team condition seemes to be a little steeper than than the other conditions.
+
+
+```{r TeamScore_v_Target_Plot}
 plot_data_team <- team_data %>%
   select(Target, SessionOrder, TeamScore) %>%
   group_by(SessionOrder, Target) %>%
@@ -134,7 +148,8 @@ ggplot(data = plot_data_team, aes(x = Target, y = TeamScoreAverage, color = Sess
 ```
 
 Visually, there appears to be no interaction between Target and SessionOrder for Team Score dependent variable. 
-
+  
+  
 ###### Correct Items Collected
 ```{r}
 plot_data_team <- team_data %>%
@@ -151,16 +166,83 @@ ggplot(data = plot_data_team, aes(x = Target, y = CI_teamAverage, color = Sessio
   labs(y = "Count", x = "Target", title = "Correct Items Vs. Target", color = "Session", shape = "Session")
 ```
 
-
-#### Correct Items Collected 
+Visually, there appears to be no apparent interaction between Target and SessionOrder for Correct Items dependent variable. An argument could be made that there is an interaction between session 3 and 4 and Individual and Individual_Team. The graph suggests that the number of team items collected has little increase from sesssion 3 to session 4. The graph suggests there is a larger increase in correct items collected from session 3 to session 4. These arugements are complicated by the large standard errors.
 
 #### Incorrect Items Collected 
 
+```{r}
+plot_data_team <- team_data %>%
+  select(Target, SessionOrder, II_team) %>%
+  group_by(SessionOrder, Target) %>%
+  summarise(II_teamAverage = mean(II_team), 
+            Stdv =sd(II_team), n = length(II_team), 
+            StEr = sd(II_team) / sqrt(length(II_team)))
+
+ggplot(data = plot_data_team, aes(x = Target, y = II_teamAverage, color = SessionOrder, shape = SessionOrder)) +
+  geom_point(size = 3) +
+  geom_line(aes(group=SessionOrder, color = SessionOrder)) + 
+  geom_errorbar(aes(ymin = II_teamAverage - StEr, ymax = II_teamAverage + StEr), width = 0.2) +
+  labs(y = "Count", x = "Target", title = "Incorrect Items Vs. Target", color = "Session", shape = "Session")
+```
+
+Visually, there appears to be some interaction between Target and SessionOrder for Incorrect items. It looks like in the individual condition, the teams collected about the same number of incorrect items. It also looks like participants collected the least amount of incorrect items in the Team and Individual_Team condition. It is difficul to draw conclusions because the standard errors are so large. 
+
 #### Time remaining
+
+```{r}
+plot_data_team <- team_data %>%
+  select(Target, SessionOrder, timeRemaining_team) %>%
+  group_by(SessionOrder, Target) %>%
+  summarise(timeRemaining_teamAverage = mean(timeRemaining_team), 
+            Stdv =sd(timeRemaining_team), n = length(timeRemaining_team), 
+            StEr = sd(timeRemaining_team) / sqrt(length(timeRemaining_team)))
+
+ggplot(data = plot_data_team, aes(x = Target, y = timeRemaining_teamAverage, color = SessionOrder, shape = SessionOrder)) +
+  geom_point(size = 3) +
+  geom_line(aes(group=SessionOrder, color = SessionOrder)) + 
+  geom_errorbar(aes(ymin = timeRemaining_teamAverage - StEr, ymax = timeRemaining_teamAverage + StEr), width = 0.2) +
+  labs(y = "Time (Sec)", x = "Target", title = "Time Remaining Vs. Target", color = "Session", shape = "Session")
+```
+
+Visually, there appears to be no interaction between Target and SessionOrder for time remaining. The graph suggests that time increase the amount of time remaining at the end of the session faster when in the Team condition. In other words, when given team feedback, the amount of time remaning at the end of each session increases faster. 
 
 #### Errors (Unique)
 
+```{r}
+plot_data_team <- team_data %>%
+  select(Target, SessionOrder, ERROR_team_unique) %>%
+  group_by(SessionOrder, Target) %>%
+  summarise(ERROR_team_uniqueAverage = mean(ERROR_team_unique), 
+            Stdv =sd(ERROR_team_unique), n = length(ERROR_team_unique), 
+            StEr = sd(ERROR_team_unique) / sqrt(length(ERROR_team_unique)))
+
+ggplot(data = plot_data_team, aes(x = Target, y = ERROR_team_uniqueAverage, color = SessionOrder, shape = SessionOrder)) +
+  geom_point(size = 3) +
+  geom_line(aes(group=SessionOrder, color = SessionOrder)) + 
+  geom_errorbar(aes(ymin = ERROR_team_uniqueAverage - StEr, ymax = ERROR_team_uniqueAverage + StEr), width = 0.2) +
+  labs(y = "Count", x = "Target", title = "Unique Errors Vs. Target", color = "Session", shape = "Session")
+```
+
+Visually, there appears to be no interaction between Target and SessionOrder for Amount of unique errors committed.
+
 #### Errors (Total)
+
+```{r}
+plot_data_team <- team_data %>%
+  select(Target, SessionOrder, ERROR_team_total) %>%
+  group_by(SessionOrder, Target) %>%
+  summarise(ERROR_team_totalAverage = mean(ERROR_team_total), 
+            Stdv =sd(ERROR_team_total), n = length(ERROR_team_total), 
+            StEr = sd(ERROR_team_total) / sqrt(length(ERROR_team_total)))
+
+ggplot(data = plot_data_team, aes(x = Target, y = ERROR_team_totalAverage, color = SessionOrder, shape = SessionOrder)) +
+  geom_point(size = 3) +
+  geom_line(aes(group=SessionOrder, color = SessionOrder)) + 
+  geom_errorbar(aes(ymin = ERROR_team_totalAverage - StEr, ymax = ERROR_team_totalAverage + StEr), width = 0.2) +
+  labs(y = "Count", x = "Target", title = "Total Errors Vs. Target", color = "Session", shape = "Session")
+```
+
+Visually, there appears to be no interaction between Target and SessionOrder for the total errors committed.
 
 ```{r cars}
 summary(cars)
